# bayes-filter-demo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LinearModel.ipynb  README.md  main.cc
docs/html/: annotated.html  bayes__filtering_8h_source.html  classeom_1_1DoublePendulum-members.html  classeom_1_1DoublePendulum.html  classeom_1_1DoublePendulum__coll__graph.map  classeom_1_1DoublePendulum__coll__graph.md5  classeom_1_1DoublePendulum__inherit__graph.map  classeom_1_1DoublePendulum__inherit__graph.md5  classeom_1_1EomBase-members.html  classeom_1_1EomBase.html  classeom_1_1EomBase__coll__graph.map  classeom_1_1EomBase__coll__graph.md5  classeom_1_1EomBase__inherit__graph.map  classeom_1_1EomBase__inherit__graph.md5  classes.html  classodesolver_1_1Euler-members.html  classodesolver_1_1Euler.html  classodesolver_1_1Euler__coll__graph.map  classodesolver_1_1Euler__coll__graph.md5  classodesolver_1_1Euler__inherit__graph.map  classodesolver_1_1Euler__inherit__graph.md5  classodesolver_1_1ExplicitSolver-members.html  classodesolver_1_1ExplicitSolver.html  classodesolver_1_1ExplicitSolver__coll__graph.map  classodesolver_1_1ExplicitSolver__coll__graph.md5  classodesolver_1_1ExplicitSolver__inherit__graph.map  classodesolver_1_1ExplicitSolver__inherit__graph.md5  classodesolver_1_1OdeSolverBase-members.html  classodesolver_1_1OdeSolverBase.html  classodesolver_1_1OdeSolverBase__coll__graph.map  classodesolver_1_1OdeSolverBase__coll__graph.md5  classodesolver_1_1OdeSolverBase__inherit__graph.map  classodesolver_1_1OdeSolverBase__inherit__graph.md5  classodesolver_1_1RK4-members.html  classodesolver_1_1RK4.html  classodesolver_1_1RK4__coll__graph.map  classodesolver_1_1RK4__coll__graph.md5  classodesolver_1_1RK4__inherit__graph.map  classodesolver_1_1RK4__inherit__graph.md5  classrunner_1_1Runner-members.html  (+67 more)
include/: eom.h  ode_solver.h
src/: CMakeLists.txt  eom.cc  ode_solver.cc  runner.cc  viewer.cc
src/include/: config.h  eom.h  ode_solver.h  runner.h  types.h  (+1 more)
test/: CMakeLists.txt  solver_test.cc
test/gtest/: gtest-all.cc
(+37 files in other folders)
